@@ -1,5 +1,10 @@
 # $Id$
 
+2008-09-20	Denis M. Gabaidulin
+
+	* meta/classes/MetaConfiguration: Experimental feature for the real nerds.
+	Help sync Enumerations and database.
+
 2008-09-18	Denis M. Gabaidulin
 
 	* main/Base/LightMetaProperty.class.php: isFormless method added.
